add webflux security and dockerize app. adapt tests accordingly.

--- a/frontend/src/main/web/src/app/app.component.html
+++ b/frontend/src/main/web/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav>
+<!--<app-navbar></app-navbar>-->
+<!--<nav>
   <a routerLink="/dashboard">Dashboard</a>
-</nav>
+</nav>-->
 <router-outlet></router-outlet>
-
